<resources>
    <string name="app_name">Restaurant</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_default_window">DefaultWindow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="start">Dodaj do zamówienia</string>
    <string name="stop">Oceń Danie</string>
    <string name="reset">Przejdz do zamówienia </string>
    <string name="kasuj_list_da">Kasuj Listę Dań</string>
    <string name="zap_a">Zapłać</string>
    <string name="z_zam_wienie">Złóż zamówienie</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_register2">RegisterActivity2</string>
</resources>
