<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

    <Button
        android:id="@+id/add_to_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rate_dish"
        android:layout_alignBottom="@+id/rate_dish"
        android:layout_toStartOf="@+id/rate_dish"
        android:text="@string/start" />
  
  <Button
      android:id="@+id/rate_dish"
      android:layout_centerHorizontal="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:text="@string/stop" />

    <Button
        android:id="@+id/show_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/rate_dish"
        android:text="@string/reset" />
</RelativeLayout>
