<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivity"
    android:background="@drawable/gradient_start">

      <ListView
          android:layout_margin="10dp"
          android:id="@+id/listView1"
          android:layout_width="match_parent"
          android:layout_height="300dp">
      </ListView>

      <TextView
          android:id="@+id/text_price"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="25sp"
          android:textAlignment="center"
          android:text="" />

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/kasuj_list_da"
          android:id="@+id/but_del_order" />
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/zap_a"
          android:id="@+id/pay_btn"/>
      <Button
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/z_zam_wienie"
          android:id="@+id/make_order_btn"/>

</LinearLayout>
